[gd_scene load_steps=2 format=3 uid="uid://cy72t6lvvasq5"]

[ext_resource type="Script" path="res://Util/hurtbox.gd" id="1_6n5hm"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_6n5hm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
